--- a/modules/openapi-generator/src/main/resources/JavaSpring/apiController.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaSpring/apiController.mustache
@@ -111,9 +111,6 @@ public class {{classname}}Controller implements {{classname}} {
     {{#isDeprecated}}
     @Deprecated
     {{/isDeprecated}}
-    {{^useResponseEntity}}
-    @ResponseStatus({{#springHttpStatus}}{{{code}}}{{/springHttpStatus}})
-    {{/useResponseEntity}}
     public {{#responseWrapper}}{{.}}<{{/responseWrapper}}{{#useResponseEntity}}ResponseEntity<{{/useResponseEntity}}{{>returnTypes}}{{#useResponseEntity}}>{{/useResponseEntity}}{{#responseWrapper}}>{{/responseWrapper}} {{operationId}}(
         {{#allParams}}{{>queryParams}}{{>pathParams}}{{>headerParams}}{{>bodyParams}}{{>formParams}}{{>cookieParams}}{{^-last}},
         {{/-last}}{{/allParams}}{{#vendorExtensions.x-spring-paginated}}{{#hasParams}},
@@ -124,7 +121,7 @@ public class {{classname}}Controller implements {{classname}} {
         {{>methodBody}}
         {{/async}}
         {{#async}}
-        return new Callable<ResponseEntity<{{>returnTypes}}>>() {
+        return new Callable<{{#useResponseEntity}}ResponseEntity<{{/useResponseEntity}}{{>returnTypes}}{{#useResponseEntity}}>{{/useResponseEntity}}>() {
             @Override
             public ResponseEntity<{{>returnTypes}}> call() {
                 {{>methodBody}}
