--- a/modules/openapi-generator/src/main/resources/JavaSpring/beanValidationCore.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaSpring/beanValidationCore.mustache
@@ -12,7 +12,7 @@ minLength not set, maxLength set
 @Size: minItems not set && maxItems set
 }}{{^minItems}}{{#maxItems}}@Size(max = {{.}}) {{/maxItems}}{{/minItems}}{{!
 @Email: useBeanValidation
-}}{{#isEmail}}{{#useBeanValidation}}@{{#useJakartaEe}}jakarta{{/useJakartaEe}}{{^useJakartaEe}}javax{{/useJakartaEe}}.validation.constraints.Email{{/useBeanValidation}}{{!
+}}{{#isEmail}}{{#useBeanValidation}}@{{javaxPackage}}.validation.constraints.Email{{/useBeanValidation}}{{!
 @Email: performBeanValidation exclusive
 }}{{^useBeanValidation}}{{#performBeanValidation}}@org.hibernate.validator.constraints.Email{{/performBeanValidation}}{{/useBeanValidation}}{{/isEmail}}{{!
 check for integer or long / all others=decimal type with @Decimal*
