remove empty spaces in import and export

--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/model.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/model.mustache
@@ -1,5 +1,5 @@
 {{>header}}
-// ignore_for_file: unused_element, invalid_annotation_target
+// ignore_for_file: unused_element{{#useFreezed}}, invalid_annotation_target{{/useFreezed}}
 {{#models}}
     {{#model}}
     {{^useFreezed}}
