--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/lib.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/lib.mustache
@@ -11,8 +11,5 @@ export 'package:{{pubName}}/{{sourceFolder}}/auth/oauth.dart';
 {{! For freezed all the models are simply part of models.dart file utilizing the part directive}}
 {{#useFreezed}}export 'package:{{pubName}}/{{sourceFolder}}/{{modelPackage}}/models.dart';{{/useFreezed}}
 {{! No need to export all the models files as freezed uses the part of directive for it models}}
-{{^useFreezed}}
-    {{#models}}{{#model}}
-export 'package:{{pubName}}/{{sourceFolder}}/{{modelPackage}}/{{classFilename}}.dart';
-    {{/model}}{{/models}}
-{{/useFreezed}}
+{{^useFreezed}}{{#models}}{{#model}}export 'package:{{pubName}}/{{sourceFolder}}/{{modelPackage}}/{{classFilename}}.dart';
+{{/model}}{{/models}}{{/useFreezed}}
