--- a/modules/openapi-generator/src/main/resources/kotlin-client/libraries/jvm-retrofit2/infrastructure/ApiClient.kt.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-client/libraries/jvm-retrofit2/infrastructure/ApiClient.kt.mustache
@@ -60,6 +60,28 @@ import okhttp3.MediaType.Companion.toMediaType
     private val okHttpClientBuilder: OkHttpClient.Builder? = null{{^kotlinx_serialization}},
     private val serializerBuilder: {{#gson}}Gson{{/gson}}{{#moshi}}Moshi.{{/moshi}}Builder = Serializer.{{#gson}}gson{{/gson}}{{#moshi}}moshi{{/moshi}}Builder{{/kotlinx_serialization}},
     private val callFactory : Call.Factory? = null,
+    private val converterFactories: List<Converter.Factory> = listOf(
+        ScalarsConverterFactory.create(),
+        {{#gson}}
+        GsonConverterFactory.create(serializerBuilder.create()),
+        {{/gson}}
+        {{#useRxJava}}
+        RxJavaCallAdapterFactory.create(),
+        {{/useRxJava}}
+        {{#useRxJava2}}
+        RxJava2CallAdapterFactory.create(),
+        {{/useRxJava2}}
+        {{#useRxJava3}}
+        RxJava3CallAdapterFactory.create(),
+        {{/useRxJava3}}
+        {{#moshi}}
+        MoshiConverterFactory.create(serializerBuilder.build()),
+        {{/moshi}}
+        {{#kotlinx_serialization}}
+        kotlinxSerializationJson.asConverterFactory("application/json".toMediaType()),
+        {{/kotlinx_serialization}}
+    ),
+    @Deprecated("this property is deprecated. use converterFactories.")
     private val converterFactory: Converter.Factory? = null,
 ) {
     private val apiAuthorizations = mutableMapOf<String, Interceptor>()
@@ -68,24 +90,11 @@ import okhttp3.MediaType.Companion.toMediaType
     private val retrofitBuilder: Retrofit.Builder by lazy {
         Retrofit.Builder()
             .baseUrl(baseUrl)
-            .addConverterFactory(ScalarsConverterFactory.create())
-            {{#gson}}
-            .addConverterFactory(GsonConverterFactory.create(serializerBuilder.create()))
-            {{/gson}}
-            {{#useRxJava}}
-            .addCallAdapterFactory(RxJavaCallAdapterFactory.create())
-            {{/useRxJava}}
-            {{#useRxJava2}}
-            .addCallAdapterFactory(RxJava2CallAdapterFactory.create())
-            {{/useRxJava2}}{{#useRxJava3}}
-            .addCallAdapterFactory(RxJava3CallAdapterFactory.create())
-            {{/useRxJava3}}
-            {{#moshi}}
-            .addConverterFactory(MoshiConverterFactory.create(serializerBuilder.build()))
-            {{/moshi}}
-            {{#kotlinx_serialization}}
-            .addConverterFactory(kotlinxSerializationJson.asConverterFactory("application/json".toMediaType()))
-            {{/kotlinx_serialization}}
+            .apply {
+                converterFactories.forEach {
+                    addConverterFactory(it)
+                }
+            }
             .apply {
                 if (converterFactory != null) {
                     addConverterFactory(converterFactory)
