--- a/modules/openapi-generator/src/main/resources/java-micronaut/client/api.mustache
+++ b/modules/openapi-generator/src/main/resources/java-micronaut/client/api.mustache
@@ -45,7 +45,10 @@ import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 	{{{.}}}
 {{/additionalClientTypeAnnotations}}
 {{>common/generatedAnnotation}}
-@Client("${{openbrace}}{{{applicationName}}}-base-path{{closebrace}}")
+@Client(
+  {{#configureClientId}}id = "{{clientId}}",{{/configureClientId}}
+  path = "${{openbrace}}{{{applicationName}}}{{basePathSeparator}}base-path{{closebrace}}"
+)
 public interface {{classname}} {
 {{#operations}}
     {{#operation}}
