--- a/modules/openapi-generator/src/main/resources/Javascript/libraries/apollo/api.mustache
+++ b/modules/openapi-generator/src/main/resources/Javascript/libraries/apollo/api.mustache
@@ -27,7 +27,7 @@ export default class <&classname> extends ApiClient {
     /**<#summary>
      * <&summary></summary><#notes>
      * <&notes></notes><#allParams><#required>
-     * @param {<&vendorExtensions.x-jsdoc-type>} <&paramName> <&description></required></allParams><#hasOptionalParams>
+     * @param {<&vendorExtensions.x-jsdoc-type>} [<&paramName>] <&description></required></allParams><#hasOptionalParams>
      * @param {Object} opts Optional parameters<#allParams><^required>
      * @param {<&vendorExtensions.x-jsdoc-type>} opts.<&paramName> <&description><#defaultValue> (default to <&.>)</defaultValue></required></allParams></hasOptionalParams>
      * @param requestInit Dynamic configuration. @see {@link https://github.com/apollographql/apollo-server/pull/1277}
