--- a/modules/openapi-generator/src/main/resources/Javascript/libraries/javascript/api.mustache
+++ b/modules/openapi-generator/src/main/resources/Javascript/libraries/javascript/api.mustache
@@ -33,15 +33,35 @@ export default class <&classname> {
      * @param {String} response The complete HTTP response.
      */</usePromises>
 
-    /**<#summary>
-     * <&summary></summary><#notes>
-     * <&notes></notes><#allParams><#required>
-     * @param {<&vendorExtensions.x-jsdoc-type>} <&paramName> <&description></required></allParams><#hasOptionalParams>
-     * @param {Object} opts Optional parameters<#allParams><^required>
-     * @param {<&vendorExtensions.x-jsdoc-type>} opts.<&paramName> <&description><#defaultValue> (default to <&.>)</defaultValue></required></allParams></hasOptionalParams><^usePromises>
-     * @param {module:<#invokerPackage><&invokerPackage>/</invokerPackage><#apiPackage><&apiPackage>/</apiPackage><&classname>~<&operationId>Callback} callback The callback function, accepting three arguments: error, data, response<#returnType>
-     * data is of type: {@link <&vendorExtensions.x-jsdoc-type>}</returnType></usePromises><#usePromises>
-     * @return {Promise} a {@link https://www.promisejs.org/|Promise}<#returnType>, with an object containing data of type {@link <&vendorExtensions.x-jsdoc-type>} and HTTP response</returnType><^returnType>, with an object containing HTTP response</returnType></usePromises>
+    /**
+     <#summary>
+     * <&summary>
+     </summary>
+     <#notes>
+     * <&notes>
+     </notes>
+     <#allParams>
+     <#required>
+     * @param {<&vendorExtensions.x-jsdoc-type>} [<&paramName>]<#description> <&description></description>
+     </required>
+     </allParams>
+     <#hasOptionalParams>
+     * @param {Object} opts Optional parameters
+     <#allParams>
+     <^required>
+     * @param {<&vendorExtensions.x-jsdoc-type>} opts.<&paramName> <&description><#defaultValue> (default to <&.>)</defaultValue>
+     </required>
+     </allParams>
+     </hasOptionalParams>
+     <^usePromises>
+     * @param {module:<#invokerPackage><&invokerPackage>/</invokerPackage><#apiPackage><&apiPackage>/</apiPackage><&classname>~<&operationId>Callback} callback The callback function, accepting three arguments: error, data, response
+     <#returnType>
+     * data is of type: {@link <&vendorExtensions.x-jsdoc-type>}
+     </returnType>
+     </usePromises>
+     <#usePromises>
+     * @return {Promise} a {@link https://www.promisejs.org/|Promise}<#returnType>, with an object containing data of type {@link <&vendorExtensions.x-jsdoc-type>} and HTTP response</returnType><^returnType>, with an object containing HTTP response</returnType>
+     </usePromises>
      */
 </emitJSDoc>    <operationId><#usePromises>WithHttpInfo</usePromises>(<vendorExtensions.x-codegen-arg-list>) {
       <#vendorExtensions.x-codegen-has-optional-params>
