Remove extra newline from template

--- a/modules/openapi-generator/src/main/resources/java-micronaut/client/api.mustache
+++ b/modules/openapi-generator/src/main/resources/java-micronaut/client/api.mustache
@@ -45,8 +45,8 @@ import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 	{{{.}}}
 {{/additionalClientTypeAnnotations}}
 {{>common/generatedAnnotation}}
-@Client(
-  {{#configureClientId}}id = "{{clientId}}",{{/configureClientId}}
+@Client({{#configureClientId}}
+  id = "{{clientId}}",{{/configureClientId}}
   path = "${{openbrace}}{{{applicationName}}}{{basePathSeparator}}base-path{{closebrace}}"
 )
 public interface {{classname}} {
