added static variable with the content of the jax-rs subresource @Path annotation

--- a/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/api.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/api.mustache
@@ -27,6 +27,7 @@ import {{javaxPackage}}.validation.Valid;{{/useBeanValidation}}
 {{>generatedAnnotation}}
 public {{#interfaceOnly}}interface{{/interfaceOnly}}{{^interfaceOnly}}class{{/interfaceOnly}} {{classname}} {
 {{#operations}}
+   {{^interfaceOnly}}public{{/interfaceOnly}} static final String PATH = "{{commonPath}}";
 {{#operation}}
 
 {{#interfaceOnly}}{{>apiInterface}}{{/interfaceOnly}}{{^interfaceOnly}}{{>apiMethod}}{{/interfaceOnly}}
