Declarative client annotation path attribute only supported when id attribute is set

--- a/modules/openapi-generator/src/main/resources/java-micronaut/client/api.mustache
+++ b/modules/openapi-generator/src/main/resources/java-micronaut/client/api.mustache
@@ -46,8 +46,8 @@ import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 {{/additionalClientTypeAnnotations}}
 {{>common/generatedAnnotation}}
 @Client({{#configureClientId}}
-  id = "{{clientId}}",{{/configureClientId}}
-  path = "${{openbrace}}{{{applicationName}}}{{basePathSeparator}}base-path{{closebrace}}"
+  id = "{{clientId}}",
+  path = {{/configureClientId}}"${{openbrace}}{{{applicationName}}}{{basePathSeparator}}base-path{{closebrace}}"
 )
 public interface {{classname}} {
 {{#operations}}
