Cleaned up style of generated file

--- a/modules/openapi-generator/src/main/resources/java-micronaut/client/api.mustache
+++ b/modules/openapi-generator/src/main/resources/java-micronaut/client/api.mustache
@@ -47,8 +47,7 @@ import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 {{>common/generatedAnnotation}}
 @Client({{#configureClientId}}
   id = "{{clientId}}",
-  path = {{/configureClientId}}"${{openbrace}}{{{applicationName}}}{{basePathSeparator}}base-path{{closebrace}}"
-)
+  path = {{/configureClientId}}"${{openbrace}}{{{applicationName}}}{{basePathSeparator}}base-path{{closebrace}}")
 public interface {{classname}} {
 {{#operations}}
     {{#operation}}
