--- a/modules/openapi-generator/src/main/resources/go-server/controller-api.mustache
+++ b/modules/openapi-generator/src/main/resources/go-server/controller-api.mustache
@@ -89,6 +89,20 @@ func (c *{{classname}}Controller) {{nickname}}(w http.ResponseWriter, r *http.Re
 	{{/hasQueryParams}}
 	{{#allParams}}
 	{{#isPathParam}}
+	{{#isFloat}}
+	{{paramName}}Param, err := parseFloat32Parameter({{#routers}}{{#mux}}params["{{baseName}}"]{{/mux}}{{#chi}}chi.URLParam(r, "{{baseName}}"){{/chi}}{{/routers}}, {{required}})
+	if err != nil {
+		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
+		return
+	}
+	{{/isFloat}}
+	{{#isDouble}}
+	{{paramName}}Param, err := parseFloat64Parameter({{#routers}}{{#mux}}params["{{baseName}}"]{{/mux}}{{#chi}}chi.URLParam(r, "{{baseName}}"){{/chi}}{{/routers}}, {{required}})
+	if err != nil {
+		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
+		return
+	}
+	{{/isDouble}}
 	{{#isLong}}
 	{{paramName}}Param, err := parseInt64Parameter({{#routers}}{{#mux}}params["{{baseName}}"]{{/mux}}{{#chi}}chi.URLParam(r, "{{baseName}}"){{/chi}}{{/routers}}, {{required}})
 	if err != nil {
@@ -103,12 +117,31 @@ func (c *{{classname}}Controller) {{nickname}}(w http.ResponseWriter, r *http.Re
 		return
 	}
 	{{/isInteger}}
+	{{^isFloat}}
+	{{^isDouble}}
 	{{^isLong}}
 	{{^isInteger}}
 	{{paramName}}Param := {{#routers}}{{#mux}}params["{{baseName}}"]{{/mux}}{{#chi}}chi.URLParam(r, "{{baseName}}"){{/chi}}{{/routers}}
-	{{/isInteger}}{{/isLong}}
+	{{/isInteger}}
+	{{/isLong}}
+	{{/isDouble}}
+	{{/isFloat}}
 	{{/isPathParam}}
 	{{#isQueryParam}}
+	{{#isFloat}}
+	{{paramName}}Param, err := parseFloat32Parameter(query.Get("{{baseName}}"), {{required}})
+	if err != nil {
+		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
+		return
+	}
+	{{/isFloat}}
+	{{#isDouble}}
+	{{paramName}}Param, err := parseFloat64Parameter(query.Get("{{baseName}}"), {{required}})
+	if err != nil {
+		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
+		return
+	}
+	{{/isDouble}}
 	{{#isLong}}
 	{{paramName}}Param, err := parseInt64Parameter(query.Get("{{baseName}}"), {{required}})
 	if err != nil {
@@ -131,6 +164,20 @@ func (c *{{classname}}Controller) {{nickname}}(w http.ResponseWriter, r *http.Re
 	}
 	{{/isBoolean}}
 	{{#isArray}}
+	{{#items.isFloat}}
+	{{paramName}}Param, err := parseFloat32ArrayParameter(query.Get("{{baseName}}"), {{required}})
+	if err != nil {
+		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
+	return
+	}
+	{{/items.isFloat}}
+	{{#items.isDouble}}
+	{{paramName}}Param, err := parseFloat64ArrayParameter(query.Get("{{baseName}}"), {{required}})
+	if err != nil {
+		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
+		return
+	}
+	{{/items.isDouble}}
 	{{#items.isLong}}
 	{{paramName}}Param, err := parseInt64ArrayParameter(query.Get("{{baseName}}"), ",", {{required}})
 	if err != nil {
@@ -145,12 +192,18 @@ func (c *{{classname}}Controller) {{nickname}}(w http.ResponseWriter, r *http.Re
 		return
 	}
 	{{/items.isInteger}}
+	{{^items.isFloat}}
+	{{^items.isDouble}}
 	{{^items.isLong}}
 	{{^items.isInteger}}
 	{{paramName}}Param := strings.Split(query.Get("{{baseName}}"), ",")
 	{{/items.isInteger}}
 	{{/items.isLong}}
+	{{/items.isDouble}}
+	{{/items.isFloat}}
 	{{/isArray}}
+	{{^isFloat}}
+	{{^isDouble}}
 	{{^isLong}}
 	{{^isInteger}}
 	{{^isBoolean}}
@@ -160,6 +213,8 @@ func (c *{{classname}}Controller) {{nickname}}(w http.ResponseWriter, r *http.Re
 	{{/isBoolean}}
 	{{/isInteger}}
 	{{/isLong}}
+	{{/isDouble}}
+	{{/isFloat}}
 	{{/isQueryParam}}
 	{{#isFormParam}}
 	{{#isFile}}{{#isArray}}
