in quarkus library  of jaxrs generator update pom.xml and change support async default value to true

--- a/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/libraries/quarkus/api.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/libraries/quarkus/api.mustache
@@ -14,8 +14,7 @@ import org.jboss.resteasy.annotations.GZIP;
 import io.swagger.annotations.*;
 {{/useSwaggerAnnotations}}
 {{#supportAsync}}
-import java.util.concurrent.CompletionStage;
-import java.util.concurrent.CompletableFuture;
+import io.smallrye.mutiny.Uni;
 {{/supportAsync}}
 
 import java.io.InputStream;
