--- a/modules/openapi-generator/src/main/resources/Java/libraries/feign/ApiClient.mustache
+++ b/modules/openapi-generator/src/main/resources/Java/libraries/feign/ApiClient.mustache
@@ -100,9 +100,14 @@ public class ApiClient {
       {{#isBasicBasic}}
         auth = new HttpBasicAuth();
       {{/isBasicBasic}}
+      {{^isBasicBasic}}
       {{#isBasicBearer}}
         auth = new HttpBearerAuth("{{scheme}}");
       {{/isBasicBearer}}
+      {{^isBasicBearer}}
+        throw new RuntimeException("auth name \"" + authName + "\" is not a supported basic auth type");
+      {{/isBasicBearer}}
+      {{/isBasicBasic}}
       {{/isBasic}}
       {{#isApiKey}}
         auth = new ApiKeyAuth({{#isKeyInHeader}}"header"{{/isKeyInHeader}}{{#isKeyInQuery}}"query"{{/isKeyInQuery}}{{#isKeyInCookie}}"cookie"{{/isKeyInCookie}}, "{{keyParamName}}");
