Add repository as configurable option to pub client libraries

--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/pubspec.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/pubspec.mustache
@@ -2,6 +2,9 @@ name: {{pubName}}
 version: {{pubVersion}}
 description: {{pubDescription}}
 homepage: {{pubHomepage}}
+{{#pubRepository}}
+repository: {{pubRepository}}
+{{/pubRepository}}
 
 environment:
   sdk: '>=2.15.0 <3.0.0'
