--- a/modules/openapi-generator/src/main/resources/dart2/pubspec.mustache
+++ b/modules/openapi-generator/src/main/resources/dart2/pubspec.mustache
@@ -6,6 +6,9 @@ name: '{{{pubName}}}'
 version: '{{{pubVersion}}}'
 description: '{{{pubDescription}}}'
 homepage: '{{{pubHomepage}}}'
+{{#pubRepository}}
+repository: {{pubRepository}}
+{{/pubRepository}}
 environment:
   sdk: '>=2.12.0 <3.0.0'
 dependencies:
