--- a/modules/openapi-generator/src/main/resources/dart2/pubspec.mustache
+++ b/modules/openapi-generator/src/main/resources/dart2/pubspec.mustache
@@ -7,7 +7,7 @@ version: '{{{pubVersion}}}'
 description: '{{{pubDescription}}}'
 homepage: '{{{pubHomepage}}}'
 {{#pubRepository}}
-repository: {{pubRepository}}
+repository: {{.}}
 {{/pubRepository}}
 environment:
   sdk: '>=2.12.0 <3.0.0'
