Support setting publish_to in pubspec.yaml

--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/pubspec.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/pubspec.mustache
@@ -3,8 +3,11 @@ version: {{pubVersion}}
 description: {{pubDescription}}
 homepage: {{pubHomepage}}
 {{#pubRepository}}
-repository: {{pubRepository}}
+repository: {{.}}
 {{/pubRepository}}
+{{#pubPublishTo}}
+publish_to: {{.}}
+{{/pubPublishTo}}
 
 environment:
   sdk: '>=2.15.0 <3.0.0'
