Add the date serializer annotation if a list has date format.

--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/serialization/json_serializable/class.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/serialization/json_serializable/class.mustache
@@ -54,6 +54,9 @@ class {{{classname}}} {
   {{#isDate}}
   @DateSerializer()
   {{/isDate}}
+  {{#isArray}}{{#items}}{{#isDate}}
+  @DateSerializer()
+  {{/isDate}}{{/items}}{{/isArray}}
 
   {{#required}}
   {{#finalProperties}}final {{/finalProperties}}{{{datatypeWithEnum}}}{{#isNullable}}?{{/isNullable}} {{{name}}};
