[API-744] stop escaping html characters on go (#77)
* stop escaping html charaters on go

* nit

* update

* update

--- a/modules/openapi-generator/src/main/resources/go/model_enum.mustache
+++ b/modules/openapi-generator/src/main/resources/go/model_enum.mustache
@@ -91,7 +91,11 @@ func NewNullable{{classname}}(val *{{classname}}) *Nullable{{classname}} {
 }
 
 func (v Nullable{{{classname}}}) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
+	buffer := &bytes.Buffer{}
+	encoder := json.NewEncoder(buffer)
+	encoder.SetEscapeHTML(false)
+	err := encoder.Encode(v.value)
+	return buffer.Bytes(), err
 }
 
 func (v *Nullable{{{classname}}}) UnmarshalJSON(src []byte) error {
