--- a/modules/openapi-generator/src/main/resources/go/model_anyof.mustache
+++ b/modules/openapi-generator/src/main/resources/go/model_anyof.mustache
@@ -66,7 +66,11 @@ func (dst *{{classname}}) UnmarshalJSON(data []byte) error {
 func (src *{{classname}}) MarshalJSON() ([]byte, error) {
 {{#anyOf}}
 	if src.{{{.}}} != nil {
-		return json.Marshal(&src.{{{.}}})
+		buffer := &bytes.Buffer{}
+		encoder := json.NewEncoder(buffer)
+		encoder.SetEscapeHTML(false)
+		err := encoder.Encode(&src.{{{.}}})
+		return buffer.Bytes(), err
 	}
 
 {{/anyOf}}
