--- a/modules/openapi-generator/src/main/resources/go/model_oneof.mustache
+++ b/modules/openapi-generator/src/main/resources/go/model_oneof.mustache
@@ -87,7 +87,11 @@ func (dst *{{classname}}) UnmarshalJSON(data []byte) error {
 func (src {{classname}}) MarshalJSON() ([]byte, error) {
 {{#oneOf}}
 	if src.{{{.}}} != nil {
-		return json.Marshal(&src.{{{.}}})
+		buffer := &bytes.Buffer{}
+		encoder := json.NewEncoder(buffer)
+		encoder.SetEscapeHTML(false)
+		err := encoder.Encode(&src.{{{.}}})
+		return buffer.Bytes(), err
 	}
 
 {{/oneOf}}
