Switch to garde crate for validation

--- a/modules/openapi-generator/src/main/resources/rust-server/Cargo.mustache
+++ b/modules/openapi-generator/src/main/resources/rust-server/Cargo.mustache
@@ -89,7 +89,7 @@ mime = "0.3"
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-validator = { version = "0.16", features = ["derive"] }
+garde = "0.11.2"
 
 # Crates included if required by the API definition
 {{#usesXml}}
